@@ -56,7 +56,7 @@
         <dependency>
             <groupId>net.hasor</groupId>
             <artifactId>hasor-core</artifactId>
-            <version>2.4.5</version>
+            <version>2.4.6-SNAPSHOT</version>
         </dependency>
 
         <!-- freemarker -->
