@@ -28,5 +28,5 @@ import java.lang.annotation.Target;
 @Target({ElementType.TYPE})
 @Retention(RetentionPolicy.RUNTIME)
 public @interface ValidBy {
-    public Class<? extends Validation> value();
+    public Class<? extends Validation>[] value();
 }
